Simplificando a questão de campos não obrigatórios em Produto
